detect power connect/disconnect

--- a/app/src/main/res/layout/activity_lockscreen.xml
+++ b/app/src/main/res/layout/activity_lockscreen.xml
@@ -12,9 +12,10 @@
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
         android:maxLines="1"
@@ -25,9 +26,9 @@
     <TextView
         android:id="@+id/tvWarrning"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
         android:maxLines="1"
@@ -39,23 +40,23 @@
     <com.andrognito.patternlockview.PatternLockView
         android:id="@+id/patter_lock_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-
+        android:layout_height="0dp"
+        android:layout_weight="6"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
         app:aspectRatio="square"
         app:aspectRatioEnabled="true"
         app:dotAnimationDuration="150"
+        app:dotNormalSize="16dp"
         app:dotCount="3"/>
+
     <LinearLayout
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
+        android:layout_marginHorizontal="24dp"
         >
         <Button
             android:id="@+id/btnLeft"
