--- a/app/src/main/res/layout/activity_lockscreen.xml
+++ b/app/src/main/res/layout/activity_lockscreen.xml
@@ -21,7 +21,8 @@
         android:maxLines="1"
         android:text="Welcome"
         android:textColor="@color/white"
-        android:textSize="34sp"/>
+        android:textSize="30sp"
+        />
 
     <TextView
         android:id="@+id/tvWarrning"
@@ -32,7 +33,7 @@
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
         android:maxLines="1"
-        android:text="Warrning !!!"
+        android:text=""
         android:textColor="@android:color/holo_red_dark"
         android:textStyle="bold"
         android:textSize="20sp"/>
@@ -57,6 +58,7 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:layout_marginHorizontal="24dp"
+
         >
         <Button
             android:id="@+id/btnLeft"
@@ -71,7 +73,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Right Button"
-            />
+           />
+            <!--android:background="@drawable/transparent"-->
+            <!--android:textSize="20sp"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:fontFamily="sans-serif-medium"-->
+            <!--/>-->
     </LinearLayout>
 
 </LinearLayout>
