--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     tools:context=".MainActivity"
     >
 
     <ImageView
-        android:id="@+id/battery"
+        android:id="@+id/imgBattery"
         android:layout_width="match_parent"
         android:layout_height="600px"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/battery" />
+        android:src="@drawable/battery"
+        android:layout_marginTop="30dp"
+        />
 
     <TextView
         android:id="@+id/battery_level"
@@ -26,7 +27,7 @@
         android:textStyle="bold"
         android:layout_marginTop="24dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/battery"
+        android:layout_below="@+id/imgBattery"
         android:text="Battery Level"
         />
 
