--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="mine_shaft">#efc5ca</color>
+    <color name="indigo">#00FFFFFF</color>
+    <color name="pomegranate">#f4511e</color>
+    <color name="white">#FFFF</color>
+    <color name="buttonBacground">#E2F8F8F8</color>
+    <!--<color name="pink">#FFFFFF</color>-->
 </resources>
