--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyButton" parent="Theme.AppCompat.Light">
+        <item name="android:textSize">20sp</item>
+        <item name="colorControlHighlight">@color/indigo</item>
+        <item name="colorButtonNormal">@color/buttonBacground</item>
+    </style>
 </resources>
