--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     tools:context=".MainActivity"
     >
@@ -12,9 +12,8 @@
     <ImageView
         android:id="@+id/imgBattery"
         android:layout_width="match_parent"
-        android:layout_height="600px"
+        android:layout_height="200dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="54dp"
         android:src="@drawable/battery" />
 
     <TextView
