--- a/app/src/main/res/layout-mdpi/activity_lockscreen.xml
+++ b/app/src/main/res/layout-mdpi/activity_lockscreen.xml
@@ -13,15 +13,14 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1.5"
         android:layout_gravity="center_horizontal"
+        android:layout_weight="1.5"
         android:fontFamily="sans-serif-thin"
         android:gravity="center|bottom"
         android:maxLines="1"
-        android:text="@string/draw_pattern_again"
+        android:text=""
         android:textColor="@color/white"
-        android:textSize="30sp"
-        />
+        android:textSize="34sp" />
 
     <TextView
         android:id="@+id/tvWarrning"
@@ -32,10 +31,10 @@
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
         android:maxLines="1"
-        android:text="@string/pattern_error"
+        android:text=""
         android:textColor="@android:color/holo_red_dark"
         android:textStyle="bold"
-        android:textSize="20sp"/>
+        android:textSize="24sp"/>
 
     <com.andrognito.patternlockview.PatternLockView
         android:id="@+id/patter_lock_view"
@@ -67,7 +66,8 @@
             android:layout_weight="1"
             android:text="Left Button"
             android:theme="@style/MyButton"
-            android:layout_marginLeft="16dp"
+            android:marginLeft="18dp"
+            android:textSize="18sp"
             />
         <Button
             android:id="@+id/btnRight"
@@ -76,7 +76,8 @@
             android:layout_weight="1"
             android:text="Right Button"
             android:theme="@style/MyButton"
-            android:layout_marginRight="16dp"
+            android:marginRight="18dp"
+            android:textSize="18sp"
             />
     </LinearLayout>
 
