--- a/app/src/main/res/layout-xhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xhdpi/activity_main.xml
@@ -12,9 +12,9 @@
     <ImageView
         android:id="@+id/imgBattery"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="260dp"
         android:layout_alignParentTop="true"
-        android:src="@drawable/battery" />
+        android:src="@drawable/logo_512" />
 
     <TextView
         android:id="@+id/battery_level"
@@ -23,7 +23,7 @@
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="48dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/imgBattery"
         android:text="Battery Level"
