--- a/app/src/main/res/layout-mdpi/activity_lockscreen.xml
+++ b/app/src/main/res/layout-mdpi/activity_lockscreen.xml
@@ -1,84 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg_rad"
-    android:orientation="vertical"
     tools:context=".LockscreenActivity">
-
-
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1.5"
-        android:fontFamily="sans-serif-thin"
-        android:gravity="center|bottom"
-        android:maxLines="1"
-        android:text=""
-        android:textColor="@color/white"
-        android:textSize="34sp" />
-
-    <TextView
-        android:id="@+id/tvWarrning"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="0.8"
-        android:layout_gravity="center_horizontal"
-        android:fontFamily="sans-serif-thin"
-        android:gravity="center"
-        android:maxLines="1"
-        android:text=""
-        android:textColor="@android:color/holo_red_dark"
-        android:textStyle="bold"
-        android:textSize="24sp"/>
-
-    <com.andrognito.patternlockview.PatternLockView
-        android:id="@+id/patter_lock_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6"
-        android:layout_gravity="center_horizontal"
-        app:aspectRatio="square"
-        app:aspectRatioEnabled="true"
-        app:dotAnimationDuration="150"
-        app:dotNormalSize="16dp"
-        app:dotCount="3"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.5"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:paddingVertical="16dp"
-        >
-        <Button
-            android:id="@+id/btnLeft"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Left Button"
-            android:theme="@style/MyButton"
-            android:marginLeft="18dp"
-            android:textSize="18sp"
-            />
-        <Button
-            android:id="@+id/btnRight"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Right Button"
-            android:theme="@style/MyButton"
-            android:marginRight="18dp"
-            android:textSize="18sp"
-            />
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_rad"
+        android:orientation="vertical"
+        tools:context=".LockscreenActivity">
 
-</LinearLayout>
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1.5"
+            android:fontFamily="sans-serif-thin"
+            android:gravity="center|bottom"
+            android:maxLines="1"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="34sp" />
+
+        <TextView
+            android:id="@+id/tvWarrning"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-thin"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text=""
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold"
+            android:textSize="24sp"/>
+
+        <com.andrognito.patternlockview.PatternLockView
+            android:id="@+id/patter_lock_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="6"
+            android:layout_gravity="center_horizontal"
+            app:aspectRatio="square"
+            app:aspectRatioEnabled="true"
+            app:dotAnimationDuration="150"
+            app:dotNormalSize="16dp"
+            app:dotCount="3"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.5"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:paddingVertical="16dp"
+            >
+            <Button
+                android:id="@+id/btnLeft"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Left Button"
+                android:theme="@style/MyButton"
+                android:layout_marginLeft="18dp"
+                android:textSize="18sp"
+                />
+            <Button
+                android:id="@+id/btnRight"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Right Button"
+                android:theme="@style/MyButton"
+                android:layout_marginRight="18dp"
+                android:textSize="18sp"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+    <!-- view for AdMob Banner Ad -->
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/lockScreenAdview"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_home_footer_test"
+        android:visibility="visible" />
+</RelativeLayout>
