--- a/app/src/main/res/layout-xhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xhdpi/activity_main.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     tools:context=".MainActivity"
     >
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+
     <ImageView
         android:id="@+id/imgBattery"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="240dp"
         android:layout_alignParentTop="true"
         android:src="@drawable/logo_512" />
 
@@ -23,7 +29,7 @@
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="32dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/imgBattery"
         android:text="Battery Level"
@@ -54,6 +60,16 @@
         android:layout_centerHorizontal="true"
         android:text="Temperature: 23 Celius"
         />
+</RelativeLayout>
 
 
+    <!-- view for AdMob Banner Ad -->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_home_footer_test" />
 </RelativeLayout>
