--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     tools:context=".MainActivity"
     >
 
-    <ImageView
-        android:id="@+id/imgBattery"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/logo_512" />
-
-    <TextView
-        android:id="@+id/battery_level"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:layout_marginTop="48dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/imgBattery"
-        android:text="Battery Level"
-        />
+        android:layout_centerInParent="true">
 
-    <TextView
-        android:id="@+id/voltage_level"
+        <ImageView
+            android:id="@+id/imgBattery"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/logo_512" />
+
+        <TextView
+            android:id="@+id/battery_level"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imgBattery"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="48dp"
+            android:text="Battery Level"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/voltage_level"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/battery_level"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="24dp"
+            android:text="Voltage"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/temperature_level"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/voltage_level"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="24dp"
+            android:text="Temperature: 23 Celius"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
+
+    <!-- view for AdMob Banner Ad -->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:layout_below="@+id/battery_level"
-        android:layout_marginTop="24dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Voltage"
-        />
-
-    <TextView
-        android:id="@+id/temperature_level"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:layout_below="@+id/voltage_level"
-        android:layout_marginTop="24dp"
-        android:layout_centerHorizontal="true"
-        android:text="Temperature: 23 Celius"
-        />
-
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_home_footer_test" />
 
 </RelativeLayout>
