--- a/app/src/main/res/layout-hdpi/activity_main.xml
+++ b/app/src/main/res/layout-hdpi/activity_main.xml
@@ -15,10 +15,12 @@
 
     <ImageView
         android:id="@+id/imgBattery"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:src="@drawable/logo_512" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/ic_battery_30"
+        />
 
     <TextView
         android:id="@+id/battery_level"
