--- a/app/src/main/res/layout-ldpi/activity_main.xml
+++ b/app/src/main/res/layout-ldpi/activity_main.xml
@@ -15,10 +15,13 @@
 
     <ImageView
         android:id="@+id/imgBattery"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+
         android:layout_alignParentTop="true"
-        android:src="@drawable/logo_512" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/ic_battery_30"
+        />
 
     <TextView
         android:id="@+id/battery_level"
