--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -16,10 +16,11 @@
 
         <ImageView
             android:id="@+id/imgBattery"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_width="320dp"
+            android:layout_height="320dp"
             android:layout_alignParentTop="true"
-            android:src="@drawable/logo_512" />
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_battery_30" />
 
         <TextView
             android:id="@+id/battery_level"
