--- a/app/src/main/res/layout-xhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xhdpi/activity_main.xml
@@ -17,10 +17,12 @@
 
     <ImageView
         android:id="@+id/imgBattery"
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_width="260dp"
+        android:layout_height="260dp"
         android:layout_alignParentTop="true"
-        android:src="@drawable/logo_512" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/ic_battery_30"
+        />
 
     <TextView
         android:id="@+id/battery_level"
