update ui, icon,

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFF</color>
     <color name="buttonBacground">#E2F8F8F8</color>
     <color name="seprator_line">#5B837F7F</color>
-    <!--<color name="pink">#FFFFFF</color>-->
+    <color name="battery_outline">#5A5875</color>
 </resources>
