--- a/app/src/main/res/drawable/ic_battery_full_with_thunder.xml
+++ b/app/src/main/res/drawable/ic_battery_full_with_thunder.xml
@@ -1,12 +1,10 @@
-<vector
-    android:height="200dp"
-    android:viewportHeight="58"
-    android:viewportWidth="58"
-    android:width="200dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/battery_outline" android:pathData="M24,0h10v4h-10z"/>
-    <path android:fillColor="#E7ECED" android:pathData="M41.536,58H16.464C15.103,58 14,56.897 14,55.536V6.464C14,5.103 15.103,4 16.464,4h25.072C42.897,4 44,5.103 44,6.464v49.072C44,56.897 42.897,58 41.536,58z"/>
-    <path android:fillColor="#43B05C" android:pathData="M14,45v10.536C14,56.897 15.103,58 16.464,58h25.072C42.897,58 44,56.897 44,55.536V45H14z"/>
+<vector android:height="200dp" android:viewportHeight="58"
+    android:viewportWidth="58" android:width="200dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#43B05C" android:pathData="M41.536,58H16.464C15.103,58 14,56.897 14,55.536V6.464C14,5.103 15.103,4 16.464,4h25.072C42.897,4 44,5.103 44,6.464v49.072C44,56.897 42.897,58 41.536,58z"/>
+    <path android:fillColor="@color/battery_outline" android:pathData="M22.5,0h12v4h-12z"/>
+    <!--<path-->
+        <!--android:pathData="M36,29h-4V16.068c0.012,-0.058 -0.064,-0.092 -0.1,-0.046L22,32h5l0.002,13.929c-0.016,0.059 0.06,0.097 0.098,0.05L36,29z"-->
+        <!--android:fillColor="@color/white"/>-->
     <group
         android:translateX="18"
         android:translateY="21"
